Fix z-index

--- a/sass/base/layout.scss
+++ b/sass/base/layout.scss
@@ -47,6 +47,8 @@
 
   .container {
     padding: 0;
+    position: relative;
+    z-index: 2;
   }
 
   .site-branding {
